header section done

--- a/index.html
+++ b/index.html
@@ -12,5 +12,29 @@
       rel="stylesheet"
     />
   </head>
-  <body></body>
+  <body>
+    <header class="page-header-container">
+      <div>
+        <h1 id="header-slogan">
+          Let's make <br />
+          beautiful flowers a <br />
+          part of your life.
+        </h1>
+        <p id="header-about">
+          It is a long established fact that a reader will be distracted by the
+          readable content of a page when looking at its layout. The point of
+          using Lorem Ipsum is that it has a more-or-less normal distribution of
+          letters.
+        </p>
+        <button class="btn-primary">Shop Now</button>
+      </div>
+      <div>
+        <img
+          id="banner-image"
+          src="./Flower Asset/pngwing 10.png"
+          alt="flower"
+        />
+      </div>
+    </header>
+  </body>
 </html>
