Hot deal section done

--- a/index.html
+++ b/index.html
@@ -36,5 +36,25 @@
         />
       </div>
     </header>
+    <main>
+      <section>
+        <div class=""></div>
+      </section>
+      <section class="hot-deal-content-container">
+        <div>
+          <h3 class="section-headline">
+            Hot Deal ! Sale Up To 25% <span class="span-text">Off</span>
+          </h3>
+          <p class="section-about">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+          <button class="btn-primary">Sign Up</button>
+        </div>
+        <div>
+          <img src="./Flower Asset/pngwing 8.png" alt="flower-rose" />
+        </div>
+      </section>
+    </main>
   </body>
 </html>
