input email section done

--- a/index.html
+++ b/index.html
@@ -37,24 +37,78 @@
       </div>
     </header>
     <main>
-      <section>
-        <div class=""></div>
-      </section>
+      <!-- SECTION 02: HOT DEAL SECTION -->
       <section class="hot-deal-content-container">
         <div>
-          <h3 class="section-headline">
+          <h3 class="headline-section">
             Hot Deal ! Sale Up To 25% <span class="span-text">Off</span>
           </h3>
-          <p class="section-about">
+          <p class="about-section">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
-          <button class="btn-primary">Sign Up</button>
+          <button class="btn-primary" id="btn-sign-up">Sign Up</button>
         </div>
         <div>
           <img src="./Flower Asset/pngwing 8.png" alt="flower-rose" />
         </div>
       </section>
+
+      <!-- SECTION 03: SOCIAL MEDIA SECTION -->
+      <section class="instagram-section">
+        <div>
+          <div class="instagram-section-text">
+            <div>
+              <div class="headline-section" id="instagram-headline">
+                Instagram
+              </div>
+              <div class="about-section" id="instagram-about">
+                It is a long established fact that a reader will be distracted
+                by the readable content of a page when looking at its layout.
+              </div>
+            </div>
+          </div>
+          <div id="instagram-section-images">
+            <img
+              class="instagram-flower"
+              src="./Flower Asset/Flower 01.png"
+              alt="flower-pink"
+            />
+            <img
+              class="instagram-flower"
+              src="./Flower Asset/Rectangle 4.png"
+              alt="flower-white"
+            />
+            <img
+              class="instagram-flower"
+              src="./Flower Asset/Rectangle 5.png"
+              alt="flower-blue"
+            />
+            <img
+              class="instagram-flower"
+              src="./Flower Asset/Rectangle 6.png"
+              alt="flower-red"
+            />
+          </div>
+        </div>
+      </section>
+
+      <!-- SECTION 04: EMAIL SUBSCRIBE SECTION -->
+      <section>
+        <div id="bg-form-image">
+          <h3 id="sub-form-text">Get The Latest Deals</h3>
+          <p id="coupon-about">$30 coupon for first shopping</p>
+          <input
+            id="input-email-box"
+            type="email"
+            placeholder="Enter your email here"
+          />
+          <button class="btn-primary">Subscribe</button>
+        </div>
+      </section>
     </main>
+
+    <!-- FOOTER SECTION -->
+    <footer></footer>
   </body>
 </html>
