main project done

--- a/index.html
+++ b/index.html
@@ -109,6 +109,21 @@
     </main>
 
     <!-- FOOTER SECTION -->
-    <footer></footer>
+    <footer>
+      <div id="footer-section">
+        <div>
+          <h3 id="footer-headline">
+            <span class="span-text">Flower</span>Shop
+          </h3>
+          <p id="footer-about">
+            It is a long established fact that a reader will be distracted by
+            the readable content of a page when looking at its layout.
+          </p>
+          <p id="footer-copyright">
+            @ 2020-2023, FlowerShop.com. All rights reserved.
+          </p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
