bonus section done

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
   <body>
     <header class="page-header-container">
       <div>
-        <h1 id="header-slogan">
+        <h1 id="slogan-header">
           Let's make <br />
           beautiful flowers a <br />
           part of your life.
         </h1>
-        <p id="header-about">
+        <p id="about-header">
           It is a long established fact that a reader will be distracted by the
           readable content of a page when looking at its layout. The point of
           using Lorem Ipsum is that it has a more-or-less normal distribution of
@@ -37,13 +37,42 @@
       </div>
     </header>
     <main>
+      <!-- BONUS SECTION: OUR FEATURED FLOWERS -->
+      <section>
+        <div id="our-featured-flowers">
+          <div>
+            <!-- Our Featured Flowers -->
+            <h3 class="headline-section" id="featured-flowers-headline">
+              Our Featured Flowers
+            </h3>
+            <!-- Description -->
+            <p class="about-section" id="featured-flower-about">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+        <!-- flower showcase background -->
+        <div class="flower-showcase-box">
+          <div id="flower-showcase-pink-box"></div>
+          <div id="flower-showcase-blue-box"></div>
+          <div id="flower-showcase-green-box"></div>
+        </div>
+        <!-- title of showcased flower -->
+        <div class="flower-name">
+          <p>Pink Flower Tree</p>
+          <p>Blue Flower Tree</p>
+          <p>Yellow Flower Tree</p>
+        </div>
+      </section>
+
       <!-- SECTION 02: HOT DEAL SECTION -->
       <section class="hot-deal-content-container">
         <div>
-          <h3 class="headline-section">
+          <h3 class="headline-section" id="hot-deal-headline">
             Hot Deal ! Sale Up To 25% <span class="span-text">Off</span>
           </h3>
-          <p class="about-section">
+          <p class="about-section" id="hot-deal-about">
             It is a long established fact that a reader will be distracted by
             the readable content of a page when looking at its layout.
           </p>
