--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
             the readable content of a page when looking at its layout.
           </p>
           <p id="footer-copyright">
-            @ 2020-2023, FlowerShop.com. All rights reserved.
+            &copy; 2020-2023, FlowerShop.com. All rights reserved.
           </p>
         </div>
       </div>
