--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
           <div>
             <p id="tom-cruise-review-text">
               Absolutely stunning blooms! The flower shop exceeded my
-              expectations with their exquisite arrangements. Highly recommend!
+              expectations with their exquisite arrangements.<br />
+              <br />
+              Highly recommend!
             </p>
           </div>
         </div>
